--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,10 +36,17 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - ./frontend/src:/app/src
+      - ./frontend/public:/app/public
+      - ./frontend/index.html:/app/index.html
+      - ./frontend/vite.config.ts:/app/vite.config.ts
+      - ./frontend/tsconfig.json:/app/tsconfig.json
+      - ./frontend/tsconfig.app.json:/app/tsconfig.app.json
+      - ./frontend/tsconfig.node.json:/app/tsconfig.node.json
+      - ./frontend/package.json:/app/package.json
+      - ./frontend/.env:/app/.env
     working_dir: /app
-    command: npm run dev -- --host
+    command: sh -c "npm install && npm run dev -- --host"
 
 volumes:
   mysql_data_volume:
