fix: ajustes nas variaveis de ambiente e setups

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,6 @@ NODE_ENV=development
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=seuemail@email.com
-SMTP_PASS=suaSenhaDeApp
-NOTIFY_EMAILS=seuemail@email.com
+SMTP_USER=bellini.daan@gmail.com
+SMTP_PASS=qoim qfvy kwyh bqat
+NOTIFY_EMAILS=bellini.daan@gmail.com
