--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,9 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+# Instalar NestJS CLI globalmente
+RUN npm install -g @nestjs/cli
+
 COPY package*.json ./
 RUN npm install
 
