--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - "3000:3000"
     volumes:
       - ./backend:/app
+      - /app/node_modules
     working_dir: /app
     command: npm run start:dev
 
@@ -44,6 +45,7 @@ services:
       - "5555:5555"
     volumes:
       - ./backend:/app
+      - /app/node_modules
     working_dir: /app
     command: npx prisma studio --hostname 0.0.0.0 --port 5555
 
